RESOLVED FIXED47412
[Qt] Fix WKStringQt.h and WKURLQt.h API problems.
https://bugs.webkit.org/show_bug.cgi?id=47412
Summary [Qt] Fix WKStringQt.h and WKURLQt.h API problems.
Jocelyn Turcotte
Reported 2010-10-08 06:11:56 PDT
[Qt] Fix WKStringQt.h and WKURLQt.h API problems.
Attachments
Patch (2.45 KB, patch)
2010-10-08 06:12 PDT, Jocelyn Turcotte
no flags
Jocelyn Turcotte
Comment 1 2010-10-08 06:12:39 PDT
Andreas Kling
Comment 2 2010-10-08 07:25:29 PDT
Comment on attachment 70235 [details] Patch LGTM.
Andras Becsi
Comment 3 2010-10-08 07:31:12 PDT
Comment on attachment 70235 [details] Patch Clearing flags on attachment: 70235 Committed r69398: <http://trac.webkit.org/changeset/69398>
Andras Becsi
Comment 4 2010-10-08 07:31:21 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.