2010-10-08  Jocelyn Turcotte  <jocelyn.turcotte@nokia.com>

Reviewed by Andreas Kling.

        [Qt] Fix WKStringQt.h and WKURLQt.h API problems.
        https://bugs.webkit.org/show_bug.cgi?id=47412

        * UIProcess/API/cpp/qt/WKStringQt.h:
        Remove the extern "C"
        * UIProcess/API/cpp/qt/WKURLQt.h:
        Remove the extern "C"
        * UIProcess/API/qt/qgraphicswkview.h:
        Fix the forwarded declaration


Canonical link: https://commits.webkit.org/59999@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@69398 268f45cc-cd09-0410-ab3c-d52691b4dbfc